--- a/README.org
+++ b/README.org
@@ -10,6 +10,8 @@ Tests: [[https://circleci.com/gh/200ok-ch/organice][https://circleci.com/gh/200o
 
 Documentation: https://organice.200ok.ch/documentation.html
 
+Community chat: #organice on IRC [[https://freenode.net/][Freenode]], or #organice:matrix.org on [[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][Matrix]]
+
 # REPO_PLACEHOLDER
 
 ** What does this project do?
