--- a/README.org
+++ b/README.org
@@ -10,7 +10,7 @@ Tests: [[https://circleci.com/gh/200ok-ch/organice][https://circleci.com/gh/200o
 
 Documentation: https://organice.200ok.ch/documentation.html
 
-Community chat: #organice on IRC [[https://freenode.net/][Freenode]], or #organice:matrix.org on [[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][Matrix]]
+Community chat: #organice on IRC [[https://freenode.net/][Freenode]], or [[https://matrix.to/#/!DfVpGxoYxpbfAhuimY:matrix.org?via=matrix.org&via=ungleich.ch][#organice:matrix.org]] on Matrix
 
 # REPO_PLACEHOLDER
 
