test: Default configuration does not track state changes

--- a/test_helpers/fixtures/main_test_file.org
+++ b/test_helpers/fixtures/main_test_file.org
@@ -7,7 +7,7 @@
    DEADLINE: <2018-10-05 Fri> SCHEDULED: <2019-09-19 Thu>
 * Another top level header
 Some description content
-** TODO Another todo
+** TODO A repeating todo
    SCHEDULED: <2020-04-05 Sun +1d>
 
 * A header with tags                                              :tag1:tag2:
