--- a/changelog.org
+++ b/changelog.org
@@ -5,6 +5,11 @@ All user visible changes to organice will be documented in this file.
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
 
+* [2020-04-05 Sun]
+** Added
+   - Support for org-log-into-drawer TODO state logging
+     - Thank you [[https://github.com/cpbotha][cpbotha]] for your [[https://github.com/200ok-ch/organice/pull/271][PR]] 🙏
+
 * [2020-03-27 Fri]
 ** Fixed
    - Help texts for widen/narrow were reversed
