--- a/README.org
+++ b/README.org
@@ -62,7 +62,9 @@ Installing to the homescreen on:
 - iOS: Open organice in Mobile Safari. Tap the "share" button and
   select "Add to Home Screen".
 - Android: Open organice in Chrome or Firefox. Tap the "menu" button
-  and select "Add to homescreen" or "Install". 
+  and select "Add to homescreen" or "Install". Some browsers may also
+  present a popup banner with the option to "Add to homescreen" or
+  "Install".
 
 * Usage
 ** Current restrictions/expectations of organice
