Make local file:... links navigate to the relevant file
Make a link like [[file:foo/bar.org][bar]] into href="foo/bar.org"
without target="_blank", so that it opens in the same organice window.
This allows more convenient navigation around a network of .org files,
and in particular an index.org file which facilitates quick jumping to
the most commonly used other .org files.

--- a/test_helpers/fixtures/main_test_file.org
+++ b/test_helpers/fixtures/main_test_file.org
@@ -12,6 +12,9 @@ Some description content
 
 * A header with tags                                              :tag1:tag2:
 * A header with [[https://organice.200ok.ch][a link]]
+* A header with a link to a local .org file as content
+
+  [[file:schedule_and_timestamps.org][a local .org file]]
 * A header with a URL, mail address and phone number as content
 
   This is a URL https://foo.bar.baz/xyz?a=b&d#foo in a line of text.
