--- a/README.org
+++ b/README.org
@@ -59,17 +59,48 @@ capabilities]].
 
 Installing to the homescreen on:
 
-- iOS: Open organice in Mobile Safari. Tap the "share" button and
-  select "Add to Home Screen".
-- Android: Open organice in Chrome or Firefox. Tap the "menu" button
-  and select "Add to homescreen" or "Install". Some browsers may also
-  present a popup banner with the option to "Add to homescreen" or
-  "Install".
-  Note: Any file can be added as a separate icon on the homescreen, so 
-  several organice app icons can be added to get direct access to individual 
-  files.
+- *iOS:*
 
+  Open organice in Mobile Safari. Tap the "share" button and select
+  "Add to Home Screen".
+
+- *Android:*
+
+  The exact procedure may differ depending on your browser and Android
+  version.  If you discover improvements to the following procedure,
+  please [[#contributing][let us know]]!
+
+  First open the organice web page in your mobile browser.
+
+  - On Chrome, tap the "menu" button (three vertically stacked dots)
+    and select "Add to homescreen".
+
+  - On Firefox, tap the home icon with the plus sign inside it which
+    is immediately to the right of the URL in the address bar.
+
+  - Other browsers may have a similar procedure to one of these.
+
+  At this point, most browsers will present a popup banner with the
+  option to "Add to homescreen" or "Install".
+
+  If you want the organice app icon on your home screen to jump to a
+  specific =.org= file, and/or if you want multiple app icons on the
+  home screen to jump to different files, things can get a bit more
+  tricky.  For instance, Chrome only offers "Add to homescreen" the
+  first time; once it has been added, the option changes to "Open
+  organice".  Firefox allows creation of multiple home screen icons,
+  but when opening any of these, organice does not jump directly to
+  the specific file which was open when the icon was created.
  
+  Therefore if you want multiple organice bookmark icons on your
+  homescreen which jump straight to particular files, you may have
+  better luck using another technique.  For example, you can use a
+  third-party program called "[[https://play.google.com/store/apps/details?id=com.tasomaniac.openwith][Open Link With...]]".  Once that's
+  installed, from Chrome, visit the page in organice you want to make
+  a homescreen icon for, then tap the "menu" button again, select
+  "Share...", and then "Add To Home", then "organice".  Once it's
+  added, your home launcher may allow you to change the visible icon
+  to the organice icon, or whatever other icon you choose.
 
 * Usage
 ** Current restrictions/expectations of organice
