--- a/WIKI.org
+++ b/WIKI.org
@@ -1,200 +1,233 @@
 # NOTE: This file holds additional documentation which doesn't need to
 # be in the main README which also gets displayed on Github.
 
-* Notes on WebDAV
+* FAQ synchronization back-ends
+** Dropbox
+*** Permissions ("Full Dropbox" vs. "App folder")
 
-** Demo
+The reference organice host [[https://organice.200ok.ch/]] has the
+permission type "[[https://www.dropbox.com/developers/reference/developer-guide][Full Dropbox]]". This serves many users well -
+especially those who have Org files in various locations that they
+want to access.
 
-Here's a demo of how organice works when logging in to a WebDAV
-server.
+If you're a user and have concerns to give an application full access
+to your Dropbox, here are your options:
 
-On the left, you see a branded version of OwnCloud, on the right you
-see organice. After logging in and making a minute change, you can see
-that the =last edited= timestamp in OwnCloud changes. Also, we're
-verifying the change directly in Emacs using Emacs and you can see the
-change has also been synchronized to my local machine.
+1. You might not need to change anything after reading this: organice
+   is a front-end application, there is no back-end and no monitoring
+   whatsoever. So, when you login to Dropbox, only your browser will
+   have access to your Dropbox. So, from a security perspective,
+   you're not giving too much access to a server - your data cannot be
+   seen by anyone else but you.
 
-[[https://github.com/200ok-ch/organice/wiki/videos/demo-webdav.gif]]
+2. organice is a free and open source application. Therefore, you can
+   review the synchronization code anytime. For Dropbox, this is
+   pretty straight forward since the synchronization code is less than
+   200loc.
 
-** Missing CORS headers
+3. If you still have concerns, you can take full control! Since
+   organice is free and open source, you are free to host it yourself.
+   You can also create your own integration with Dropbox and select
+   the permissions as you wish. Here's [[#deployment][more documentation on deploying
+   organice]].
 
-If your back-end doesn't have the necessary CORS headers set (more
-info in the [[https://github.com/200ok-ch/organice/blob/master/README.org][README]], this is what the error will look like:
+** WebDAV
+   :PROPERTIES:
+   :CUSTOM_ID: faq_webdav
+   :END:
 
-[[https://github.com/200ok-ch/organice/wiki/videos/demo-webdav-failing-cors.gif]]
+*** Demo
 
-** Setup your own WebDAV Server with Apache2 on Debian
+ Here's a demo of how organice works when logging in to a WebDAV
+ server.
 
-For testing purposes, here are the instructions to setup WebDAV
-locally on your machine using Apache2 using Debian. These instructions
-are not meant to be used in production, though.
+ On the left, you see a branded version of OwnCloud, on the right you
+ see organice. After logging in and making a minute change, you can see
+ that the =last edited= timestamp in OwnCloud changes. Also, we're
+ verifying the change directly in Emacs using Emacs and you can see the
+ change has also been synchronized to my local machine.
 
-*Initial package installation*
+ [[https://github.com/200ok-ch/organice/wiki/videos/demo-webdav.gif]]
 
-#+BEGIN_SRC shell
-sudo apt -y install apache2-utils apache2
-#+END_SRC
+*** Missing CORS headers
 
-*Set up a new vhost for webdav*
+ If your back-end doesn't have the necessary CORS headers set (more
+ info in the [[https://github.com/200ok-ch/organice/blob/master/README.org][README]], this is what the error will look like:
 
-=/etc/apache2/sites-available/webdav.conf=
+ [[https://github.com/200ok-ch/organice/wiki/videos/demo-webdav-failing-cors.gif]]
 
-#+BEGIN_EXAMPLE
-Alias /webdav /srv/dav/
+*** Setup your own WebDAV Server with Apache2 on Debian
 
-RewriteEngine On
-RewriteCond %{REQUEST_METHOD} OPTIONS
-RewriteRule ^(.*)$ $1 [R=200,L]
+ For testing purposes, here are the instructions to setup WebDAV
+ locally on your machine using Apache2 using Debian. These instructions
+ are not meant to be used in production, though.
 
-<Location /webdav>
-    Options Indexes
-    DAV On
-    AuthType Basic
-    AuthName "webdav"
-    AuthUserFile /srv/dav/.htpasswd
-    Require valid-user
+ *Initial package installation*
 
-    Header always set Access-Control-Allow-Origin "*"
-    Header always set Access-Control-Allow-Methods "GET,POST,OPTIONS,DELETE,PUT,PROPFIND"
-    Header always set Access-Control-Allow-Headers "Origin,Accept,X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization,X-CSRF-Token,Depth"
-    Header always set Access-Control-Allow-Credentials true
+ #+BEGIN_SRC shell
+ sudo apt -y install apache2-utils apache2
+ #+END_SRC
 
-    Require all granted
-</location>
-#+END_EXAMPLE
+ *Set up a new vhost for webdav*
 
-*Enable Apache modules*
+ =/etc/apache2/sites-available/webdav.conf=
 
-#+BEGIN_SRC shell
-sudo a2enmod headers
-sudo a2enmod dav*
-sudo a2enmod rewrite
-sudo a2ensite webdav
-#+END_SRC
+ #+BEGIN_EXAMPLE
+ Alias /webdav /srv/dav/
 
-*Setup folder, password and rights*
+ RewriteEngine On
+ RewriteCond %{REQUEST_METHOD} OPTIONS
+ RewriteRule ^(.*)$ $1 [R=200,L]
 
-#+BEGIN_SRC shell
-sudo mkdir /srv/dav
-sudo htpasswd -c /srv/dav/.htpasswd webdav
-sudo chmod 770 /srv/dav; sudo chown www-data. /srv/dav
-sudo service apache2 restart
-#+END_SRC
+ <Location /webdav>
+     Options Indexes
+     DAV On
+     AuthType Basic
+     AuthName "webdav"
+     AuthUserFile /srv/dav/.htpasswd
+     Require valid-user
 
-*Test webdav access using a commandline tool*
+     Header always set Access-Control-Allow-Origin "*"
+     Header always set Access-Control-Allow-Methods "GET,POST,OPTIONS,DELETE,PUT,PROPFIND"
+     Header always set Access-Control-Allow-Headers "Origin,Accept,X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization,X-CSRF-Token,Depth"
+     Header always set Access-Control-Allow-Credentials true
 
-#+BEGIN_SRC shell
-sudo apt -y install cadaver
-cadaver http://localhost/webdav/
-#+END_SRC
+     Require all granted
+ </location>
+ #+END_EXAMPLE
 
-** Gotchas with WebDAV
+ *Enable Apache modules*
 
-*** =preflight request doesn't pass access control check= error
+ #+BEGIN_SRC shell
+ sudo a2enmod headers
+ sudo a2enmod dav*
+ sudo a2enmod rewrite
+ sudo a2ensite webdav
+ #+END_SRC
 
-If you are getting an error like
+ *Setup folder, password and rights*
 
-#+BEGIN_EXAMPLE
-Access to XMLHttpRequest at 'https://my.site/dav/' from origin
-'https://organice.200ok.ch' has been blocked by CORS policy: Response
-to preflight request doesn't pass access control check: It does not
-have HTTP ok status.
-#+END_EXAMPLE
+ #+BEGIN_SRC shell
+ sudo mkdir /srv/dav
+ sudo htpasswd -c /srv/dav/.htpasswd webdav
+ sudo chmod 770 /srv/dav; sudo chown www-data. /srv/dav
+ sudo service apache2 restart
+ #+END_SRC
 
-then the =RewriteRule= in the above example is either missing from, or ineffective in your webserver config.
+ *Test webdav access using a commandline tool*
 
-*** Symlinks don't work
+ #+BEGIN_SRC shell
+ sudo apt -y install cadaver
+ cadaver http://localhost/webdav/
+ #+END_SRC
 
-Unfortunately, [[https://serverfault.com/questions/453807/best-practice-to-link-with-webdav-as-followsymlinks-doesn-t-allow-to-show-symli][symlink support never made it into Apache's =mod_dav=]].
+*** Gotchas with WebDAV
 
-*** Bind-mounts of individual files don't work
+**** =preflight request doesn't pass access control check= error
 
-In an Apache =mod_dav= context, unfortunately you can't use [[https://unix.stackexchange.com/questions/198590/what-is-a-bind-mount][bind
-mounts]] of a single file instead of symlinks, because =mod_dav=
-attempts to write any changes to a file atomically, by first writing
-to a temporary file and then [[https://github.com/apache/httpd/blob/c3db73ca8a5aa7b79231a11fe2eb15de3ce943dc/modules/dav/fs/repos.c#L991][atomically renaming it to the target
-file]], and Linux prevents renaming to bind mounts with a =Device or
-resource busy= error.
+ If you are getting an error like
 
-** Configuring Nextcloud behind haproxy to allow WebDAV
-If you're running Nextcloud behind [[https://www.haproxy.com/][haproxy]] it's entirely possible to use it with
-organice using WebDAV. ...it's just a little bit convoluted.
+ #+BEGIN_EXAMPLE
+ Access to XMLHttpRequest at 'https://my.site/dav/' from origin
+ 'https://organice.200ok.ch' has been blocked by CORS policy: Response
+ to preflight request doesn't pass access control check: It does not
+ have HTTP ok status.
+ #+END_EXAMPLE
 
-The first part is the haproxy config. It should look a little bit like this:
+ then the =RewriteRule= in the above example is either missing from, or ineffective in your webserver config.
 
-#+NAME: /etc/haproxy/haproxy.conf
-#+BEGIN_SRC conf
-  frontend www
-    acl host_nextcloud hdr(host) nextcloud.example.org
-    acl path_nextcloud_public_webdav path_beg /public.php/webdav
-    # Because we need to inspect the path in the backend section we set a variable
-    # containing the path.
-    http-request set-var(txn.path) path
-    # Because the OPTIONS requests from organice doesn't include authentication we
-    # need to fake it. We can do that by redirecting all requests that satisfy these conditions:
-    #
-    # + host is Nextcloud
-    # + path is for public webdav
-    # + HTTP method is OPTIONS
-    use_backend always200ok if host_nextcloud path_nextcloud_public_webdav METH_OPTIONS
+**** Symlinks don't work
 
-  # haproxy doesn't really have a way of returning an arbitrary response, unless
-  # you want to drop down to Lua. There's no need for that, though, as this works
-  # perfectly fine. This backend doesn't have any servers attached, so it'll
-  # always result in a 503. We override the 503 by setting a custom errorfile,
-  # which incidentally looks just like a HTTP 200 response and contains all the
-  # headers we need to satisfy a CORS request.
-  backend always200ok
-    mode http
-    errorfile 503 /etc/haproxy/errors/200-ok.http
+ Unfortunately, [[https://serverfault.com/questions/453807/best-practice-to-link-with-webdav-as-followsymlinks-doesn-t-allow-to-show-symli][symlink support never made it into Apache's =mod_dav=]].
 
-  # The Nextcloud server backend is configured here. We inject CORS headers if URL
-  # starts with `/public.php/webdav`.
-  backend nextcloud
-    mode http
-    option httplog
-    acl is_webdav var(txn.path) -m beg /public.php/webdav
-    http-response add-header Access-Control-Allow-Origin "*" if is_webdav
-    http-response add-header Access-Control-Allow-Methods "GET,POST,OPTIONS,DELETE,PUT,PROPFIND" if is_webdav
-    http-response add-header Access-Control-Allow-Headers "Origin,Accept,X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization,X-CSRF-Token,Depth" if is_webdav
-    http-response add-header Access-Control-Allow-Credentials "true" if is_webdav
-    server backend01 127.0.0.1:8001
-#+END_SRC
+**** Bind-mounts of individual files don't work
 
-The ~errorfile~ needs to look something like the below. Note that the text below
-has carriage returns (~13~, ~o15~ or ~0x0d~); these are required as per the HTTP
-RFC!
+ In an Apache =mod_dav= context, unfortunately you can't use [[https://unix.stackexchange.com/questions/198590/what-is-a-bind-mount][bind
+ mounts]] of a single file instead of symlinks, because =mod_dav=
+ attempts to write any changes to a file atomically, by first writing
+ to a temporary file and then [[https://github.com/apache/httpd/blob/c3db73ca8a5aa7b79231a11fe2eb15de3ce943dc/modules/dav/fs/repos.c#L991][atomically renaming it to the target
+ file]], and Linux prevents renaming to bind mounts with a =Device or
+ resource busy= error.
 
-#+NAME: /etc/haproxy/errors/200-ok.http
-#+BEGIN_SRC text
-  HTTP/1.1 200 OK
-  Cache-Control: no-cache
-  Connection: close
-  Content-Type: text/html
-  Access-Control-Allow-Origin: *
-  Access-Control-Allow-Methods: GET,POST,OPTIONS,DELETE,PUT,PROPFIND
-  Access-Control-Allow-Headers: Origin,Accept,X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization,X-CSRF-Token,Depth
-  Access-Control-Allow-Credentials: true
+*** Configuring Nextcloud behind haproxy to allow WebDAV
+ If you're running Nextcloud behind [[https://www.haproxy.com/][haproxy]] it's entirely possible to use it with
+ organice using WebDAV. ...it's just a little bit convoluted.
 
-  <html><body><h1>200 Stuff is good!</h1>
-  Something something dark side.
-  </body></html>
-#+END_SRC
+ The first part is the haproxy config. It should look a little bit like this:
 
-** Nextcloud sharing
-In order to share a document using WebDAV you might be inclined to try to follow
-the [[https://docs.nextcloud.com/server/16/user_manual/files/access_webdav.html#accessing-public-shares-over-webdav][official documentation]], but it can be a tad confusing. Here's the executive
-summary for how to share things from Nextcloud using WebDAV:
+ #+NAME: /etc/haproxy/haproxy.conf
+ #+BEGIN_SRC conf
+   frontend www
+     acl host_nextcloud hdr(host) nextcloud.example.org
+     acl path_nextcloud_public_webdav path_beg /public.php/webdav
+     # Because we need to inspect the path in the backend section we set a variable
+     # containing the path.
+     http-request set-var(txn.path) path
+     # Because the OPTIONS requests from organice doesn't include authentication we
+     # need to fake it. We can do that by redirecting all requests that satisfy these conditions:
+     #
+     # + host is Nextcloud
+     # + path is for public webdav
+     # + HTTP method is OPTIONS
+     use_backend always200ok if host_nextcloud path_nextcloud_public_webdav METH_OPTIONS
 
-+ share a link to a folder/file
-+ remove everything but the token from the link; the token matches
-  ~/[a-zA-Z0-9]+$/~ (hit the button right of "Share link" if using the web
-  interface)
-+ use these details when logging in:
-  + URL :: https://nextcloud.example.org/public.php/webdav
-  + Username :: the token, e.g. ~ed65Fxw9Bz3MTn3~
-  + Password :: if you've set a password for the shared folder, here's where you
-                input it
+   # haproxy doesn't really have a way of returning an arbitrary response, unless
+   # you want to drop down to Lua. There's no need for that, though, as this works
+   # perfectly fine. This backend doesn't have any servers attached, so it'll
+   # always result in a 503. We override the 503 by setting a custom errorfile,
+   # which incidentally looks just like a HTTP 200 response and contains all the
+   # headers we need to satisfy a CORS request.
+   backend always200ok
+     mode http
+     errorfile 503 /etc/haproxy/errors/200-ok.http
+
+   # The Nextcloud server backend is configured here. We inject CORS headers if URL
+   # starts with `/public.php/webdav`.
+   backend nextcloud
+     mode http
+     option httplog
+     acl is_webdav var(txn.path) -m beg /public.php/webdav
+     http-response add-header Access-Control-Allow-Origin "*" if is_webdav
+     http-response add-header Access-Control-Allow-Methods "GET,POST,OPTIONS,DELETE,PUT,PROPFIND" if is_webdav
+     http-response add-header Access-Control-Allow-Headers "Origin,Accept,X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization,X-CSRF-Token,Depth" if is_webdav
+     http-response add-header Access-Control-Allow-Credentials "true" if is_webdav
+     server backend01 127.0.0.1:8001
+ #+END_SRC
+
+ The ~errorfile~ needs to look something like the below. Note that the text below
+ has carriage returns (~13~, ~o15~ or ~0x0d~); these are required as per the HTTP
+ RFC!
+
+ #+NAME: /etc/haproxy/errors/200-ok.http
+ #+BEGIN_SRC text
+   HTTP/1.1 200 OK
+   Cache-Control: no-cache
+   Connection: close
+   Content-Type: text/html
+   Access-Control-Allow-Origin: *
+   Access-Control-Allow-Methods: GET,POST,OPTIONS,DELETE,PUT,PROPFIND
+   Access-Control-Allow-Headers: Origin,Accept,X-Requested-With,Content-Type,Access-Control-Request-Method,Access-Control-Request-Headers,Authorization,X-CSRF-Token,Depth
+   Access-Control-Allow-Credentials: true
+
+   <html><body><h1>200 Stuff is good!</h1>
+   Something something dark side.
+   </body></html>
+ #+END_SRC
+
+*** Nextcloud sharing
+ In order to share a document using WebDAV you might be inclined to try to follow
+ the [[https://docs.nextcloud.com/server/16/user_manual/files/access_webdav.html#accessing-public-shares-over-webdav][official documentation]], but it can be a tad confusing. Here's the executive
+ summary for how to share things from Nextcloud using WebDAV:
+
+ + share a link to a folder/file
+ + remove everything but the token from the link; the token matches
+   ~/[a-zA-Z0-9]+$/~ (hit the button right of "Share link" if using the web
+   interface)
+ + use these details when logging in:
+   + URL :: https://nextcloud.example.org/public.php/webdav
+   + Username :: the token, e.g. ~ed65Fxw9Bz3MTn3~
+   + Password :: if you've set a password for the shared folder, here's where you
+                 input it
 
 * Building this documentation
   <<building_docs>>
