--- a/test_helpers/fixtures/main_test_file.org
+++ b/test_helpers/fixtures/main_test_file.org
@@ -12,9 +12,12 @@ Some description content
 
 * A header with tags                                              :tag1:tag2:
 * A header with [[https://organice.200ok.ch][a link]]
-* A header with a link to a local .org file as content
-
-  [[file:schedule_and_timestamps.org][a local .org file]]
+* A header with various links as content
+  Relative link to [[file:schedule_and_timestamps.org][an existing .org file in the same directory]]
+  Relative link to [[file:subdir/foo.org][a fictitious .org file in a sub-directory]]
+  Relative link to [[file:~/.GIT/3rd-party/organice/test_helpers/foo.org][a fictitious .org file in a parent directory]]
+  Absolute link to [[file:/foo/bar/baz.org][a fictitious .org file in home directory]]
+  Absolute link to [[file:/foo/bar/baz.org][a fictitious .org file]]
 * A header with a URL, mail address and phone number as content
 
   This is a URL https://foo.bar.baz/xyz?a=b&d#foo in a line of text.
