Further fixes to rendering of file: links  (#311)
Additional changes based on feedback from @schoettl:

- Use relative links in <Link to="...">.

- Handle relative file:../ paths, and watch for when they "break out"
  of the backend.

- Always render file: links as some kind of link - if not a <Link>
  then an <a href="file://..."> which is not guaranteed to resolve
  to something but will at least show the user the intention behind
  the link, and in the best case (e.g. absolute links referring to
  the same local filesystem) will work correctly.

Fixes #311.

--- a/test_helpers/fixtures/main_test_file.org
+++ b/test_helpers/fixtures/main_test_file.org
@@ -15,8 +15,10 @@ Some description content
 * A header with various links as content
   Relative link to [[file:schedule_and_timestamps.org][an existing .org file in the same directory]]
   Relative link to [[file:subdir/foo.org][a fictitious .org file in a sub-directory]]
-  Relative link to [[file:~/.GIT/3rd-party/organice/test_helpers/foo.org][a fictitious .org file in a parent directory]]
-  Absolute link to [[file:/foo/bar/baz.org][a fictitious .org file in home directory]]
+  Relative link to [[file:../foo.org][a fictitious .org file in a parent directory]]
+  Relative link to [[file:../../foo.org][a fictitious .org file in a grand-parent directory]]
+  Relative link to [[file:../../../../too-high.org][a fictitious .org file in a too-high ancestor directory]]
+  Absolute link to [[file:~/foo/bar/baz.org][a fictitious .org file in home directory]]
   Absolute link to [[file:/foo/bar/baz.org][a fictitious .org file]]
 * A header with a URL, mail address and phone number as content
 
