--- a/README.org
+++ b/README.org
@@ -483,7 +483,7 @@ In the [[https://github.com/200ok-ch/organice/wiki#webdav][Wiki]], you'll find l
 
 ** Routing
 
-Whilst organice is a true Single Page Application (SPA) and therefore
+Whilst organice is a true [[https://developer.mozilla.org/en-US/docs/Glossary/SPA][Single Page Application]] (SPA) and therefore
 has no back-end whatsoever, this does have an implication for
 deployment with regard to routing. For routes like =example.com/foo=
 to work, we need a little something extra. Within the context of a
