Add a new option to toggle whether .organice-bak files are pushed
Not all users want automatic backup files.  For example, a WebDAV
backend which exposes a git repository with external processes
handling automatic commit/sync has no need for backups, because
there is already full git history.

So add an option to disable this feature.

--- a/sample.org
+++ b/sample.org
@@ -297,7 +297,8 @@ file back up.
 
 Generally, when working with distributed Org files, we're recommending
 to put them under version control and to check for bugs and racing
-conditions between clients.
+conditions between clients. There is a setting available to disable
+backups in case you do not need them.
 * organice operates completely client side
 You don't log in to organice directly because organice doesn't have a
 back end - it operates completely client side using Dropbox, Google
