--- a/changelog.org
+++ b/changelog.org
@@ -6,16 +6,18 @@ When there are updates to the changelog, you will be notified and see a 'gift' i
 
 
 
+* [2020-06-05 Fri]
+** Fixed
+   - =file:= links are sanity checked before opened
+     - =file:= links opened in iOS from the PWA view will not open Mobile Safari
+     - Open issue: Some links will be opened as directories when the
+       link is not really going towards a directory.
+     - Thank you [[https://github.com/aspiers][aspiers]] for your [[https://github.com/200ok-ch/organice/pull/311][PR]] 🙏
+
 * [2020-06-03 Wed]
 ** Added
    - =TODO= keyword sets can now be anywhere in the file
      - Thank you [[https://github.com/aspiers][aspiers]] for your [[https://github.com/200ok-ch/organice/pull/310][PR]] 🙏
-** Fixed
-   - =file:= links are sanity checked before opened
-     - Only relative file links are linked and can be opened, since absolute and back-looking (as in starting with =../=) might not be accessible to organice.
-     - =file:= links opened in iOS from the PWA view will not open Mobile Safari
-     - Thank you [[https://github.com/aspiers][aspiers]] for your [[https://github.com/200ok-ch/organice/pull/311][PR]] 🙏
-
 * [2020-05-30 Sat]
 
 ** Added
