--- a/README.org
+++ b/README.org
@@ -50,11 +50,13 @@ You can watch it on:
 - [[https://media.emacsconf.org/2019/05.html][emacsconf.org]]
 
 * Installation
-   <<installation>>
+  :PROPERTIES:
+  :CUSTOM_ID: installation
+  :END:
 
 organice is a web application. You can use it from any browser. On iOS
 and Android, you can install organice to your homescreen. When
-started from there, it will run in full-screen and add some [[offline_support][offline
+started from there, it will run in full-screen and add some [[#offline_support][offline
 capabilities]].
 
 Installing to the homescreen on:
@@ -152,9 +154,11 @@ The strategy we're using with regards to the parser is this:
 - When the new one is finished, integrate it into organice.
 
 ** Progressive Web App / Offline Support
-    <<offline_support>>
+   :PROPERTIES:
+   :CUSTOM_ID: offline_support
+   :END:
 
-organice can run as a PWA (Progressive Web App) - see the [[installation][installation
+organice can run as a PWA (Progressive Web App) - see the [[#installation][installation
 instructions]] and does have offline support. From your home screen,
 organice will start up in full screen and it will use a [[https://developer.mozilla.org/en-US/docs/Web/API/Service_Worker_API][Service Worker]]
 to cache the application. On a desktop browser, the Service Worker
@@ -206,7 +210,7 @@ organice implements this customization strategy:
 
 - Use in-buffer settings where appropriate
 - Build custom and mobile friendly user interfaces where appropriate
-  - For example [[capture_templates][capture templates]]
+  - For example [[#capture_templates][capture templates]]
 
 ** Supported in-buffer configuration
    :PROPERTIES:
@@ -362,7 +366,7 @@ Since organice is a front-end only application, it can easily be
 deployed to any server capable of serving a static application.
 
 Please note: If you want the hosted application to connect to Dropbox
-or Google Drive, please read the section on [[synchronization_back_ends][Synchronization back-ends]].
+or Google Drive, please read the section on [[#synchronization_back_ends][Synchronization back-ends]].
 
 ** FTP
 
@@ -432,7 +436,9 @@ git push heroku master
 #+END_SRC
 
 ** Synchronization back-ends
-    <<synchronization_back_ends>>
+   :PROPERTIES:
+   :CUSTOM_ID: synchronization_back_ends
+   :END:
 
 Note that logging in to Dropbox will only work if you're running the
 app on ~http://localhost:3000~, because all redirect URIs must be
@@ -516,7 +522,9 @@ RewriteRule ^ /index.html [L]
 #+END_EXAMPLE
 
 * Capture templates
-   <<capture_templates>>
+  :PROPERTIES:
+  :CUSTOM_ID: capture_templates
+  :END:
 
 organice supports capture templates by implementing a flexible
 mechanism using URL parameters. These three of the following
@@ -567,7 +575,9 @@ https://organice.200ok.ch?captureTemplateName=Inbox&captureContent=Read+up+on+ca
 #+END_EXAMPLE
 
 *** With custom variable
-     <<media_capture>>
+    :PROPERTIES:
+    :CUSTOM_ID: media_capture
+    :END:
 
 If you want to add web pages to a reading queue (with a title, a
 capture date and a URL), this would be a good starting point:
@@ -599,7 +609,7 @@ https://organice.200ok.ch?captureTemplateName=Media&captureContent=Play+Emacs+li
 Since organice is a web application, you can use the capture templates
 feature to create bookmarklets, of course! For example, if you want a
 bookmarklet to add the current page (title, capture date and URL) to
-your reading queue using [[media_capture][this capture template]], all you need is a
+your reading queue using [[#media_capture][this capture template]], all you need is a
 little bit of JavaScript:
 
 #+BEGIN_SRC javascript
