--- a/CONTRIBUTING.org
+++ b/CONTRIBUTING.org
@@ -72,7 +72,8 @@ We have good quality assurance and an established workflow. This is it:
      https://github.com/munen/emacs.d/#auto-formatting
    - Please use ~eslint~ to ensure that your changes conform with
      our linting rules. You can run ~yarn eslint~ to check for rule
-     violations.
+     violations, and also ~yarn nibble~ to tackle them one category
+     at a time.
 7. Create Pull Request on Github to =master=
    - Check that the tests also pass on CI
 8. Core Team: Merge to =master=, deploy and accept the Issue on
